<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/apodFragment"
        android:enabled="true"
        android:icon="@drawable/ic_apod_icon"
        android:title="@string/menu_item_apod"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/spiritRoverFragment"
        android:enabled="true"
        android:icon="@drawable/ic_mars_rover_icon"
        android:title="@string/menu_item_rovers"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favouriteFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/menu_item_favourites"
        app:showAsAction="ifRoom" />
</menu>